RESOLVED FIXED30698
createThreadInternal on Android leaks on failure
https://bugs.webkit.org/show_bug.cgi?id=30698
Summary createThreadInternal on Android leaks on failure
Steve Block
Reported 2009-10-22 17:32:22 PDT
On Android, createThreadInternal leaks an object of type ThreadData on failure.
Attachments
Patch 1 for Bug 30698 (1.23 KB, patch)
2009-10-22 17:53 PDT, Steve Block
dimich: review+
benm: commit-queue-
Steve Block
Comment 1 2009-10-22 17:53:58 PDT
WebKit Commit Bot
Comment 2 2009-10-23 03:01:42 PDT
Comment on attachment 41706 [details] Patch 1 for Bug 30698 Rejecting patch 41706 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11506 test cases. fast/media/mq-transform-02.html -> failed Exiting early after 1 failures. 7441 tests run. 138.55s total testing time 7440 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 3 test cases (<1%) had stderr output
Ben Murdoch
Comment 3 2009-10-23 03:07:28 PDT
Will land manually, looks like https://bugs.webkit.org/show_bug.cgi?id=30700 caused the cq to fail.
Ben Murdoch
Comment 4 2009-10-23 07:09:21 PDT
Landed as r49977.
Eric Seidel (no email)
Comment 5 2009-10-23 12:03:11 PDT
Comment on attachment 41706 [details] Patch 1 for Bug 30698 Sorry about the commit-queue trouble. Should work fine now.
Steve Block
Comment 6 2009-10-23 12:11:36 PDT
benm@google.com has already landed this by hand.
Note You need to log in before you can comment on or make changes to this bug.