Fixes a leak in createThreadInternal on Android. https://bugs.webkit.org/show_bug.cgi?id=30698

Patch by Steve Block <steveblock@google.com> on 2009-10-23
Reviewed by Dmitry Titov.

* wtf/ThreadingPthreads.cpp: Modified.
(WTF::createThreadInternal): Avoid leaking a ThreadData object on failure.



Canonical link: https://commits.webkit.org/41431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49977 268f45cc-cd09-0410-ab3c-d52691b4dbfc